--- a/scss/_custom.scss
+++ b/scss/_custom.scss
@@ -226,7 +226,7 @@ footer header style
 .panel-footer {
     padding-top: 1em;
     padding-bottom: 1em;
-    // background-color: $footer-background-color;
+    background-color: $footer-background-color;
     p {
         font-size: 0.8125rem;
     }
