--- a/scss/_custom.scss
+++ b/scss/_custom.scss
@@ -221,10 +221,11 @@ footer header style
 
 .panel-prefooter {
     margin-bottom: 0;
+    padding-top: 2em;
     padding-bottom: 2em;
 }
 .panel-footer {
-    padding-top: 1em;
+    padding-top: 2em;
     padding-bottom: 1em;
     background-color: $footer-background-color;
     p {
@@ -237,24 +238,19 @@ footer header style
     margin-top: 1.5rem;
     margin-bottom: 1.5rem;
 }
-.panel .icon-font-style {
-    display: block;
-    font-size: 2em;
-    margin: 0px auto;
-    padding: 0px;
-    line-height: 0;
-    text-align: center;
-    // @media #{$small-only} {
-    //     font-size: 2em;
-    // }
-}
 
 ul .icon-font-style {
     font-size: 3rem;
     @media #{$small-only} {
         font-size: 2rem;
+
     }
 }
+
+.fi-social:hover {
+  fill: scale-color($primary-color, $lightness: -14%); 
+}
+
 /*===================================================================
 blog style
 ===================================================================*/
@@ -327,3 +323,9 @@ i {
         margin-top: 0rem;
     }
 }
+
+
+
+
+
+
