--- a/scss/_custom.scss
+++ b/scss/_custom.scss
@@ -221,13 +221,13 @@ footer header style
 
 .panel-prefooter {
     margin-bottom: 0;
-    padding-top: 3em;
-    padding-bottom: 3em;
+    padding-top: 2rem;
+    padding-bottom: 2rem;
     background-color: $panel-bg;
 }
 .panel-footer {
-    padding-top: 3em;
-    padding-bottom: 1em;
+    padding-top: 2rem;
+    padding-bottom: 1rem;
     background-color: $footer-background-color;
     p {
         font-size: 0.8125rem;
