add blog Dall'america alle marche

--- a/scss/_custom.scss
+++ b/scss/_custom.scss
@@ -6,6 +6,9 @@ bordo per debugging
 //     border: 1px solid green;
 // }
 
+del {
+    color: red;
+}
 /*===================================================================
 logo - cards
 ===================================================================*/
