--- a/scss/_custom.scss
+++ b/scss/_custom.scss
@@ -289,15 +289,15 @@ blog style
     margin: 0 0 2rem;
 }
 
-.sub-nav {
-    dt {
-         margin-bottom: 0.5rem;
-    }
+// .sub-nav {
+//     dt {
+//          margin-bottom: 0.5rem;
+//     }
 
-    dd {
-        margin-bottom: 0.75rem;
-    }
-}
+//     dd {
+//         margin-bottom: 0.75rem;
+//     }
+// }
 /*===================================================================
 eventi
 ===================================================================*/
