change share icon color

--- a/scss/_custom.scss
+++ b/scss/_custom.scss
@@ -269,6 +269,16 @@ ul .icon-font-style {
     }
 }
 
+.fi-social-facebook {
+    color: #3b5998;
+}
+.fi-social-twitter {
+    color: #5fa9dd;
+}
+.fi-social-google-plus {
+    color: #dd4b39;
+}
+
 /*===================================================================
 blog style
 ===================================================================*/
