--- a/scss/_custom.scss
+++ b/scss/_custom.scss
@@ -24,8 +24,8 @@ logo - cards
 }
 
 .img-cards {
-    width: 100px;
-    margin-top: 0.25rem;
+    width: 10px;
+    margin-top: 0.15rem;
 }
 /*===================================================================
 margini per allineare le aside e i button
@@ -297,6 +297,9 @@ blog style
 }
 .image-hero {
     margin: 0 0 2rem;
+}
+.image-hero-index {
+    margin: 0 0 1rem;
 }
 
 // .sub-nav {
