--- a/scss/_settings.scss
+++ b/scss/_settings.scss
@@ -128,7 +128,7 @@ $primary-color: #e00c10;
 // $info-color: #a0d3e8;
 
 $footer-background-color: #e6e6e6;
-$footer-icon-color: #d3d3d3;
+$panel-2n-bg: scale-color($white, $lightness: -5%);
 
 // We use these to control various global styles
 // $body-bg: $white;
