--- a/scss/_settings.scss
+++ b/scss/_settings.scss
@@ -128,6 +128,7 @@ $primary-color: #e00c10;
 // $info-color: #a0d3e8;
 
 $footer-background-color: #e6e6e6;
+$home-header-bg: scale-color(#4385bf, $lightness: 0%);
 $panel-2n-bg: scale-color($white, $lightness: -5%);
 
 // We use these to control various global styles
