--- a/scss/_custom.scss
+++ b/scss/_custom.scss
@@ -328,12 +328,12 @@ blog style
 .first-paragraph {
     margin-top: 1.5rem;
 }
-// .share-block {
-//     border-top: 1px solid $gainsboro;
-//     border-bottom: 1px solid $gainsboro;
-//     margin-top: 1rem;
-//     margin-bottom: 1rem;
-// }
+.share-block {
+    border-top: 1px solid $gainsboro;
+    border-bottom: 1px solid $gainsboro;
+    margin-top: 1rem;
+    margin-bottom: 1rem;
+}
 .image-hero {
     margin: 0 0 2rem;
 }
