--- a/scss/_custom.scss
+++ b/scss/_custom.scss
@@ -6,9 +6,9 @@ bordo per debugging
 //     border: 1px solid green;
 // }
 
-del {
-    color: red;
-}
+// del {
+//     color: red;
+// }
 /*===================================================================
 logo - cards
 ===================================================================*/
@@ -101,65 +101,65 @@ margini per allineare le aside e i button
 home page hero
 ===================================================================*/
 
-.text-highlight {
-    background-color: rgba($black, 0.45);
-}
-#homepage-hero {
-    background: url(../img/chicken_wings.jpg) center no-repeat;
-    background-size: cover;
-    height: 500px;
-    position: relative;
+// .text-highlight {
+//     background-color: rgba($black, 0.45);
+// }
+// #homepage-hero {
+//     background: url(../img/chicken_wings.jpg) center no-repeat;
+//     background-size: cover;
+//     height: 500px;
+//     position: relative;
     
-    h1 {
-        font-size: 4rem;
-        color: white;
-        font-weight: 500;
-        line-height: 4.5rem;
-        text-align: center;
-        margin-top: 0;
-        padding: 20px 10px;
-        @media #{$small-only} {
-            font-size: 2.2rem;
-            line-height: 3rem;
-            margin-bottom: 2rem;
-        }
-    }   
-    h2 {
-        font-size: 3rem;
-        font-weight: 400;
-        color: white;
-        @media #{$small-only} {
-            font-size: 1.5rem;
-            color: white;
-        }
-    }   
-    h3 {
-        font-size: 1.35rem;
-        font-weight: 400;
-        color: white;
-        margin-bottom: 0.1rem;
-        margin-top: 1em;
-        @media #{$small-only} {
-            font-size: 1.25rem;
-            line-height: 1em;
-        }
-    }   
-    h4 {
-        font-size: 1.15rem;
-        color: white;
-        @media #{$small-only} {
-            font-size: 1.125em;
-            color: white;
-        }
-    }
-    h5 {
-        font-size: 1rem;
-        color: white;
-        @media #{$small-only} {
-            font-size: 1rem;
-        }
-    }
-}
+//     h1 {
+//         font-size: 4rem;
+//         color: white;
+//         font-weight: 500;
+//         line-height: 4.5rem;
+//         text-align: center;
+//         margin-top: 0;
+//         padding: 20px 10px;
+//         @media #{$small-only} {
+//             font-size: 2.2rem;
+//             line-height: 3rem;
+//             margin-bottom: 2rem;
+//         }
+//     }   
+//     h2 {
+//         font-size: 3rem;
+//         font-weight: 400;
+//         color: white;
+//         @media #{$small-only} {
+//             font-size: 1.5rem;
+//             color: white;
+//         }
+//     }   
+//     h3 {
+//         font-size: 1.35rem;
+//         font-weight: 400;
+//         color: white;
+//         margin-bottom: 0.1rem;
+//         margin-top: 1em;
+//         @media #{$small-only} {
+//             font-size: 1.25rem;
+//             line-height: 1em;
+//         }
+//     }   
+//     h4 {
+//         font-size: 1.15rem;
+//         color: white;
+//         @media #{$small-only} {
+//             font-size: 1.125em;
+//             color: white;
+//         }
+//     }
+//     h5 {
+//         font-size: 1rem;
+//         color: white;
+//         @media #{$small-only} {
+//             font-size: 1rem;
+//         }
+//     }
+// }
 
 /*===================================================================
 menu page text
