--- a/scss/_custom.scss
+++ b/scss/_custom.scss
@@ -38,7 +38,7 @@ margini per allineare le aside e i button
     margin-top: 2rem;
 }
 .extra-space-footer {
-    padding-top: 4rem;
+    margin-top: 4rem;
 }
 .extra-space-image-tab-home {
     margin-top: 0.5rem;
