--- a/scss/_settings.scss
+++ b/scss/_settings.scss
@@ -1456,7 +1456,9 @@ $topbar-link-color: $navbar-color;
 // $topbar-link-bg-hover: $oil;
 $topbar-link-bg-hover: $navbar-color;
 // $topbar-link-bg-active: $primary-color;
+$topbar-link-bg-active: $navbar-color;
 // $topbar-link-bg-active-hover: scale-color($primary-color, $lightness: -14%);
+$topbar-link-bg-active-hover: scale-color($navbar-color, $lightness: -14%);
 // $topbar-link-font-family: $body-font-family;
 // $topbar-link-text-transform: none;
 // $topbar-link-padding: ($topbar-height / 3);
@@ -1482,9 +1484,9 @@ $topbar-menu-link-color: $navbar-color;
 // $topbar-menu-icon-color: $white;
 $topbar-menu-icon-color: $navbar-color;
 // $topbar-menu-link-color-toggled: $jumbo;
-$topbar-menu-link-color-toggled: scale-color($primary-color, $lightness: -15%);
+$topbar-menu-link-color-toggled: scale-color($navbar-color, $lightness: -15%);
 // $topbar-menu-icon-color-toggled: $jumbo;
-$topbar-menu-icon-color-toggled: scale-color($primary-color, $lightness: -15%);
+$topbar-menu-icon-color-toggled: scale-color($navbar-color, $lightness: -15%);
 
 // Transitions and breakpoint styles
 // $topbar-transition-speed: 300ms;
