--- a/scss/_custom.scss
+++ b/scss/_custom.scss
@@ -348,6 +348,20 @@ ul .icon-font-style {
         $base-style: true
       );
     }
+.block-grid-social-3 {
+        @include block-grid(
+        // This controls how many elements will be on each row of the block grid. Set this to whatever number you need, up to the max allowed in the variable.
+        // Available options: 1-12 by default, and false.
+        $per-row: 3,
+
+        // This controls how much space is between each item in the block grid.
+        // Use a variable or any pixel or em values.
+        $spacing: rem-calc(20),
+
+        // This controls whether or not base styles come through, set to false to leave out.
+        $base-style: true
+      );
+    }
 
 .fi-social:hover {
   fill: scale-color($primary-color, $lightness: -14%); 
