--- a/scss/_custom.scss
+++ b/scss/_custom.scss
@@ -103,7 +103,7 @@ homepage
     margin-bottom: 0;
     padding-top: 5rem;
     padding-bottom: 5rem;
-    background-color: $home-header-bg;
+    background-color: #9C5945;
     @media #{$small-only} {
         margin-bottom: 0;
         padding-top: 2rem;
