--- a/scss/_custom.scss
+++ b/scss/_custom.scss
@@ -195,6 +195,23 @@ homepage
 //     }
 // }
 
+
+/*===================================================================
+chi siamo
+===================================================================*/
+
+.panel-chi-0 {
+    margin-bottom: 0;
+    padding-top: 3rem;
+    padding-bottom: 4rem;
+    background-color: $white;
+    @media #{$small-only} {
+        margin-bottom: 0;
+        padding-top: 0rem;
+        padding-bottom: 3rem;
+    }
+}
+
 /*===================================================================
 menupage text
 ===================================================================*/
