fixing chi-siamo modals

--- a/scss/_custom.scss
+++ b/scss/_custom.scss
@@ -37,6 +37,9 @@ margini per allineare le aside e i button
 .extra-space {
     margin-top: 2rem;
 }
+.extra-space-modal {
+    margin-top: 2.5rem;
+}
 .extra-space-footer {
     margin-top: 4rem;
 }
