--- a/scss/_settings.scss
+++ b/scss/_settings.scss
@@ -1133,6 +1133,7 @@ $panel-padding: rem-calc(15);
 // $reveal-default-width: 80%;
 // $reveal-max-width: $row-width;
 // $reveal-modal-padding: rem-calc(20);
+$reveal-modal-padding: rem-calc(10);
 // $reveal-box-shadow: 0 0 10px rgba($black,.4);
 $reveal-box-shadow: 0 0 0px rgba($black,.4);
 
