--- a/scss/_custom.scss
+++ b/scss/_custom.scss
@@ -376,11 +376,13 @@ ul .icon-font-style {
 
     // This controls how much space is between each item in the block grid.
     // Use a variable or any pixel or em values.
-    $spacing: rem-calc(50),
+    $spacing: rem-calc(10),
 
     // This controls whether or not base styles come through, set to false to leave out.
     $base-style: true
   );
+    padding-right: 1rem;
+
 }
 
 .fi-social:hover {
