--- a/scss/_custom.scss
+++ b/scss/_custom.scss
@@ -351,7 +351,8 @@ footer header style
 ul .icon-font-style {
     font-size: 3rem;
     @media #{$small-only} {
-        font-size: 2rem;
+        font-size: 3rem;
+        padding-right: 2rem;
     }
 }
 .block-grid-cards-3 {
