fix inline list margin

--- a/scss/_settings.scss
+++ b/scss/_settings.scss
@@ -408,7 +408,7 @@ $blockquote-border: 8px solid scale-color($gainsboro, $lightness: 0%);
 // $block-grid-default-spacing: rem-calc(20);
 $block-grid-default-spacing: rem-calc(40);
 // $align-block-grid-to-grid: false;
-$align-block-grid-to-grid: false;
+$align-block-grid-to-grid: true;
 // Enables media queries for block-grid classes. Set to false if writing semantic HTML.
 // $block-grid-media-queries: true;
 
@@ -739,6 +739,7 @@ $button-border-style: none;
 // $inline-list-bottom-margin: rem-calc(17);
 // $inline-list-default-float-margin: rem-calc(-22);
 // $inline-list-default-float-list-margin: rem-calc(22);
+$inline-list-default-float-list-margin: rem-calc(0);
 
 // $inline-list-padding: 0;
 
