--- a/scss/_custom.scss
+++ b/scss/_custom.scss
@@ -98,6 +98,10 @@ margini per allineare le aside e i button
     margin-top:-1.1rem;
 }
 
+.no-margin-inline-list {
+    margin-left:-22px;
+}
+
 /*===================================================================
 homepage
 ===================================================================*/
