fixing recensioni by line

--- a/scss/_custom.scss
+++ b/scss/_custom.scss
@@ -181,6 +181,11 @@ chi siamo
         padding-bottom: 3rem;
     }
 }
+.by-line-chi-siamo {
+    font-style: italic;
+    font-size: 0.8rem;
+    line-height: 1;
+}
 
 /*===================================================================
 menupage text
