--- a/scss/_custom.scss
+++ b/scss/_custom.scss
@@ -185,6 +185,7 @@ chi siamo
     font-style: italic;
     font-size: 0.8rem;
     line-height: 1;
+    border-bottom: 0.5rem;
 }
 
 /*===================================================================
