--- a/scss/_custom.scss
+++ b/scss/_custom.scss
@@ -184,7 +184,8 @@ chi siamo
 .by-line-chi-siamo {
     font-style: italic;
     font-size: 0.8rem;
-    line-height: 1.5rem;
+    line-height: 0.5rem;
+    padding-bottom: 1rem;
 }
 
 /*===================================================================
