--- a/scss/_custom.scss
+++ b/scss/_custom.scss
@@ -187,6 +187,9 @@ chi siamo
     line-height: 0.5rem;
     padding-bottom: 1rem;
 }
+.extra-space-recensione {
+    margin-top: 2.5rem;
+}
 
 /*===================================================================
 menupage text
