fixing line height

--- a/scss/_custom.scss
+++ b/scss/_custom.scss
@@ -481,6 +481,7 @@ footer
     list-style: none;
     color: $topbar-menu-link-color;
     font-size: 0.875rem;
+    line-height: 2rem;
     padding: 0rem 0 0rem;
     margin: 0;
     &::after {
