fix chi siamo space

--- a/scss/_custom.scss
+++ b/scss/_custom.scss
@@ -167,7 +167,7 @@ homepage
 
 
 /*===================================================================
-chi siamo
+Chi&nbsp;Siamo
 ===================================================================*/
 
 .panel-chi-0 {
@@ -480,7 +480,7 @@ footer
   .links a {
     list-style: none;
     color: $topbar-menu-link-color;
-    font-size: 0.875rem;
+    font-size: 0.9rem;
     line-height: 3rem;
     padding: 0rem 0 0rem;
     margin: 0;
