fix menu text size

--- a/scss/_custom.scss
+++ b/scss/_custom.scss
@@ -167,7 +167,7 @@ homepage
 
 
 /*===================================================================
-Chi&nbsp;Siamo
+Chi Siamo
 ===================================================================*/
 
 .panel-chi-0 {
@@ -312,7 +312,7 @@ footer header style
 }
 
 .navbar-footer-font {
-    font-size: 0.8125rem;
+    font-size: 0.9375rem;
     line-height: 2.2rem;
     margin-top: 1.5rem;
     margin-bottom: 1.5rem;
