--- a/scss/_custom.scss
+++ b/scss/_custom.scss
@@ -165,6 +165,12 @@ homepage
     }
 }
 
+.column.small-centered {
+    margin-left: auto;
+    margin-right: auto;
+    float: none !important;
+    text-align: center;
+}
 
 /*===================================================================
 Chi Siamo
