--- a/scss/_custom.scss
+++ b/scss/_custom.scss
@@ -169,7 +169,10 @@ homepage
     margin-left: auto;
     margin-right: auto;
     float: none !important;
-    text-align: center;
+}
+
+.column.small-centered > ul > li {
+  text-align:center;
 }
 
 /*===================================================================
