--- a/scss/_custom.scss
+++ b/scss/_custom.scss
@@ -171,7 +171,7 @@ homepage
     float: none !important;
 }
 
-.column.small-centered > ul > li {
+.column.small-centered > ul > li > a {
   text-align:center;
 }
 
