--- a/scss/_custom.scss
+++ b/scss/_custom.scss
@@ -66,6 +66,9 @@ margini per allineare le aside e i button
 .extra-space-aside-tab-immagini {
     margin-top: 1.25rem;
 }
+.extra-space-aside-video {
+    margin-top: 1.3rem;
+}
 .extra-space-aside-tab-chi-siamo {
     margin-top: -0.15rem;
 }
