--- a/scss/_settings.scss
+++ b/scss/_settings.scss
@@ -631,8 +631,10 @@ $button-border-style: none;
 
 // We use these to control video container padding and margins
 // $flex-video-padding-top: rem-calc(25);
+$flex-video-padding-top: rem-calc(0);
 // $flex-video-padding-bottom: 67.5%;
 // $flex-video-margin-bottom: rem-calc(16);
+$flex-video-margin-bottom: rem-calc(0);
 
 // We use this to control widescreen bottom padding
 // $flex-video-widescreen-padding-bottom: 56.34%;
