fix video margin

--- a/scss/_custom.scss
+++ b/scss/_custom.scss
@@ -62,7 +62,12 @@ margini per allineare le aside e i button
         margin-top: 1rem;
     }
 }
-
+.extra-space-video {
+    margin-top: 0.35rem;
+    @media #{$small-only} {
+        margin-top: 1rem;
+    }
+}
 .extra-space-aside-tab-immagini {
     margin-top: 1.25rem;
 }
