change code color

--- a/scss/_settings.scss
+++ b/scss/_settings.scss
@@ -269,6 +269,7 @@ $paragraph-font-size: 1.125rem;
 
 // We use these to style <code> tags
 // $code-color: $oil;
+$code-color: $white;
 // $code-font-family: $font-family-monospace;
 // $code-font-weight: $font-weight-normal;
 // $code-background-color: scale-color($secondary-color, $lightness: 70%);
