--- a/scss/_settings.scss
+++ b/scss/_settings.scss
@@ -269,6 +269,7 @@ $paragraph-font-size: 1.125rem;
 
 // We use these to style <code> tags
 // $code-color: $oil;
+$code-color: $primary-color;
 // $code-font-family: $font-family-monospace;
 // $code-font-weight: $font-weight-normal;
 // $code-background-color: scale-color($secondary-color, $lightness: 70%);
@@ -277,6 +278,7 @@ $code-background-color: $white;
 // $code-border-style: solid;
 // $code-border-color: scale-color($code-background-color, $lightness: -10%);
 // $code-padding: rem-calc(2) rem-calc(5) rem-calc(1);
+$code-padding: rem-calc(2) rem-calc(5) rem-calc(2);
 
 // We use these to style anchors
 // $anchor-text-decoration: none;
