--- a/scss/_custom.scss
+++ b/scss/_custom.scss
@@ -522,7 +522,14 @@ card - commenti
   }
 }
 
-
+// hr {
+// height:14px; /* specify a height for this hr */
+// overflow:hidden;
+// }
+// hr:after {
+// content:".......................................................................";
+// letter-spacing: 4px; /* Use letter-spacing to increase space between dots*/
+// }
 
 
 
