--- a/scss/_custom.scss
+++ b/scss/_custom.scss
@@ -228,6 +228,7 @@ menupage text
     }
     h3 {
         font-size: 1.1rem;
+        font-weight: bold;
         margin-bottom: 0;
         margin-top: 0;
         @media #{$small-only} {
