--- a/scss/_custom.scss
+++ b/scss/_custom.scss
@@ -210,6 +210,22 @@ menupage text
 
 #menupage-text {
     /*padding:0 2rem;*/
+    h1 {
+        font-size: 1.8rem;
+        text-transform: uppercase;
+        margin-bottom: 2rem;
+        margin-top: 0.5rem;
+        text-align: center;
+        &:first-child {
+            margin-top: 1.5rem;
+        }
+        @media #{$small-only} {
+            font-size: 1.35em;
+            margin-bottom: 1.2rem;
+            margin-top: 1.5rem;
+            text-align: left;
+        }
+    }
      h2 {
         font-size: 1.6rem;
         text-transform: uppercase;
