--- a/scss/_custom.scss
+++ b/scss/_custom.scss
@@ -288,6 +288,13 @@ menupage text
         padding-bottom: 0.5rem;
         }
 }
+
+#menu-brunch {
+    p {
+        font-size: 1.125rem;
+        margin-bottom: 0.5rem;
+    }
+}
 /*===================================================================
 team detail page
 ===================================================================*/
