--- a/scss/_custom.scss
+++ b/scss/_custom.scss
@@ -321,7 +321,7 @@ footer header style
     margin-bottom: 0;
     padding-top: 3rem;
     padding-bottom: 4rem;
-    background-color: $panel-2n-bg;
+    background-color: $footer-background-color;
     @media #{$small-only} {
         margin-bottom: 0;
         padding-top: 2rem;
