--- a/scss/_settings.scss
+++ b/scss/_settings.scss
@@ -130,7 +130,7 @@ $primary-color: #e00c10;
 $navbar-color: #403f34;
 
 $footer-background-color: #e6e6e6;
-$home-header-bg: scale-color(#4385bf, $lightness: 0%);
+// $home-header-bg: scale-color(#4385bf, $lightness: 0%);
 $panel-2n-bg: scale-color($white, $lightness: -3%);
 
 // We use these to control various global styles
