--- a/scss/_custom.scss
+++ b/scss/_custom.scss
@@ -105,9 +105,14 @@ margini per allineare le aside e i button
 .no-margin-list-bullet {
     margin-top:-1.1rem;
 }
-
 .no-margin-inline-list {
     margin-left:-22px;
+}
+.menu-subheader {
+    margin-left:-0.5rem;
+    text-transform: uppercase;
+    font-style: italic;
+    font-size: 0.8rem;
 }
 
 /*===================================================================
