--- a/scss/_custom.scss
+++ b/scss/_custom.scss
@@ -109,10 +109,10 @@ margini per allineare le aside e i button
     margin-left:-22px;
 }
 .menu-subheader {
-    margin-left:-0.5rem;
+    margin-top:-0.5rem;
     text-transform: uppercase;
     font-style: italic;
-    font-size: 0.8rem;
+    font-size: 1rem;
 }
 
 /*===================================================================
