--- a/scss/_custom.scss
+++ b/scss/_custom.scss
@@ -111,8 +111,9 @@ margini per allineare le aside e i button
 .menu-subheader {
     margin-top:-0.7rem;
     text-transform: uppercase;
-    font-size: 1.5rem;
+    font-size: 1.6rem;
     @media #{$small-only} {
+        font-size: 1.35rem;
         margin-top:-0.4rem;
         line-height: 1.4rem;
     }
@@ -238,6 +239,7 @@ menupage text
         margin-bottom: 2rem;
         margin-top: 0.5rem;
         text-align: center;
+        line-height: 1.4rem;
         &:first-child {
             margin-top: 1.5rem;
         }
