add orbit slider

--- a/scss/app.scss
+++ b/scss/app.scss
@@ -26,7 +26,7 @@
 // @import "foundation/components/keystrokes";
 @import "foundation/components/labels";
 // @import "foundation/components/magellan";
-// @import "foundation/components/orbit";
+@import "foundation/components/orbit";
 // @import "foundation/components/pagination";
 @import "foundation/components/panels";
 // @import "foundation/components/pricing-tables";
